# repartition-classes

./: Cargo.toml  README.md
docs/: CLI.md
examples/: avec_listes_eleves.toml  ecole_elementaire.toml
src/: config.rs  flow.rs  lib.rs  main.rs  search.rs
tests/: integration.rs
