[package]
name = "repartition-classes"
version = "0.1.0"
edition = "2021"
description = "Outil CLI pour proposer plusieurs plans de répartition d'élèves en classes (simple et double niveau)"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "repartition-classes"
path = "src/main.rs"
